# ColliderML

./: .gitignore  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  acat.html  ais25.html  appendices.html  builder.html  changelog.html  ctd25.html  hashmap.json  index.html  pyproject.toml  pytest.ini  setup.py  visualize.html
assets/: acat.md.B9mmTpIm.js  acat.md.BDiIc69N.js  acat.md.BPHyyDYT.lean.js  acat.md.BPUaYwLg.js  acat.md.BSEC5GfV.js  acat.md.BbHif1s7.js  acat.md.BmXDQvSH.js  acat.md.BoR7afpz.lean.js  acat.md.BpH8GOTb.lean.js  acat.md.BwJyhh7-.js  acat.md.ByfHHsq8.js  acat.md.C6iiXW6m.lean.js  acat.md.CXmrpWSs.js  acat.md.CbS4ZQJC.lean.js  acat.md.Cm2EYrP-.js  acat.md.CpyVtYD-.js  acat.md.D4VnxarL.js  acat.md.D4Yaj2wd.js  acat.md.DDMMPSzZ.lean.js  acat.md.DE9AJDwl.lean.js  acat.md.DFqrhWxl.js  acat.md.DVQBwx1i.lean.js  acat.md.Dg9ZakSD.lean.js  acat.md.DvGoX9hn.js  acat.md.EmuFMP73.lean.js  acat.md.H6WJSaJG.lean.js  acat.md.dVUH3D2p.js  acat.md.h0nQealj.js  acat.md.u1GSSs9D.js  ais25.md.B-IMuMoM.js  ais25.md.BXZgsq4a.lean.js  ais25.md.BZBKgYg_.lean.js  ais25.md.By5K252V.lean.js  ais25.md.C4joANjJ.lean.js  ais25.md.CYrF0Tlx.lean.js  ais25.md.CYzS1KlD.lean.js  ais25.md.CblpXrCF.lean.js  ais25.md.CiMbwGQL.js  ais25.md.Coe7QH3s.lean.js  ais25.md.Cz3-PGqX.js  (+711 more)
benchmarks/: README.md  download_benchmark.py  thresholds.yaml
colliderml/: __init__.py  _load.py  cli.py
colliderml-0.3.0/: PKG-INFO  setup.py
detectors/: README.md  SCHEMA.json
docs/: builder.md  changelog.md  index.md  visualize.md
guide/: installation.html  introduction.html  tasks.html  (+4 more)
(+842 files in other folders)
