[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colliderml"
version = "0.3.0"
description = "A modern machine learning library for high-energy physics data analysis"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Daniel Murnane", email = "dtmurnane@lbl.gov"}
]
requires-python = ">=3.10,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "h5py>=3.10.0",
    "polars>=0.20.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
colliderml = "colliderml.cli:main"

[project.urls]
Documentation = "https://opendatadetector.github.io/ColliderML"
Source = "https://github.com/OpenDataDetector/ColliderML"
Issues = "https://github.com/OpenDataDetector/ColliderML/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
